--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "Michael Fine",
   "license": "ISC",
   "dependencies": {
+    "fs-extra": "^4.0.2",
     "lodash": "^4.17.4",
-    "request-promise": "^4.2.1"
+    "request-promise": "^4.2.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
+    "babel-plugin-stack-trace-sourcemap": "^1.0.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-watch": "^2.0.7"
+    "babel-watch": "^2.0.7",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
