--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "Michael Fine",
   "license": "ISC",
   "dependencies": {
+    "expand-home-dir": "0.0.3",
+    "forever-monitor": "^1.7.1",
     "fs-extra": "^4.0.2",
     "lodash": "^4.17.4",
+    "node-cron": "^1.2.1",
     "request-promise": "^4.2.1",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "yargs": "^9.0.1"
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
