--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "expand-home-dir": "0.0.3",
     "fs-extra": "^4.0.2",
     "request-promise": "^4.2.1",
-    "winston": "^2.3.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
@@ -23,5 +23,9 @@
     "babel-watch": "^2.0.7",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0"
+  },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/mfine15/csync"
   }
 }
