--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "csync-canvas",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Command line utility to sync files from canvas with a local dir",
   "bin": {
     "csync-canvas": "dist/index.js"
@@ -14,6 +14,7 @@
   "dependencies": {
     "expand-home-dir": "0.0.3",
     "fs-extra": "^4.0.2",
+    "request": "^2.88.0",
     "request-promise": "^4.2.1",
     "source-map-support": "^0.5.10",
     "winston": "^2.3.1"
